SourceCode/UFHT Beta v1.14 (beta 3)/src/objects/TestData__c.object
<CustomObject>
    <fields>
        <fullName>Accounts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TestDatas</relationshipLabel>
        <relationshipName>TestDatas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutoNumber__c</fullName>
        <label>AutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Formukla__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formukla</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo__c</fullName>
        <label>Geo</label>
        <scale>0</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Long_Text__c</fullName>
        <label>Long Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Multi__c</fullName>
        <label>Multi</label>
        <picklist>
            <picklistValues>
                <fullName>Hi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bye</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Rich_Text__c</fullName>
        <label>Rich Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TestEncrypted__c</fullName>
        <label>TestEncrypted</label>
        <length>10</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>TestSelf__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TestSelf</label>
        <referenceTo>TestData__c</referenceTo>
        <relationshipLabel>TestDatas</relationshipLabel>
        <relationshipName>TestDatas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>phone_plans_del__c</fullName>
        <label>phone_plans</label>
        <length>18</length>
        <referenceTo>phone_plans__x</referenceTo>
        <relationshipLabel>TestDatas</relationshipLabel>
        <relationshipName>TestDatas_del</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <label>TestData</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TestData Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestDatas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>